<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:paddingHorizontal="18dp"
    android:paddingBottom="18dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.detailkelas.TentangKelasFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <Button
            android:id="@+id/buttomJoinTelegram"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkBlue"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/join_grup_telegram"
            android:drawableEnd="@drawable/vector"/>

        <TextView
            android:id="@+id/tvTentangKelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/tentang_kelas"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/description"
            android:textAlignment="inherit"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvKelasDitujukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelas_ini_ditunjukan_untuk"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/classTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_requirement"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            tools:ignore="SmallSp" />
    </LinearLayout>

</LinearLayout>