<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.KursusFragment"
    android:layout_weight="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_searchbox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="18dp"
            app:boxCornerRadiusBottomStart="18dp"
            app:boxCornerRadiusBottomEnd="18dp"
            app:boxCornerRadiusTopEnd="18dp"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundColor="@color/white"
            android:elevation="120dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_search_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search_textbox" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_kursus"
        app:layout_constraintTop_toBottomOf="@id/container_searchbox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/topik_kelas"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lihat_semua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/filter"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radio_kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_kursus">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:button="@android:color/transparent"
            android:padding="15dp"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@drawable/text_selector" />

        <RadioButton
            android:id="@+id/rbPremium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_selector"
            android:button="@android:color/transparent"
            android:padding="15dp"
            android:text="@string/premium"
            android:textAlignment="center"
            android:textColor="@drawable/text_selector" />

        <RadioButton
            android:id="@+id/rbGratis"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_selector"
            android:button="@android:color/transparent"
            android:padding="15dp"
            android:text="@string/gratis"
            android:textAlignment="center"
            android:textColor="@drawable/text_selector" />
    </RadioGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_kelas"
        android:layout_marginTop="8dp"
        android:layout_width="320dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_kelas"
        />


</androidx.constraintlayout.widget.ConstraintLayout>