<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF3FC"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.payment.PaymentFragment">


    <ImageView
        android:id="@+id/ivBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back_24"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/course_cover"
                    />
                <LinearLayout
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tvCardCategory"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ui_ux_design"
                            android:gravity="center"
                            android:height="24dp"
                            android:textSize="10sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="#6148FF" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCardTitleCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:text="@string/belajar_web_designer_dengan_figma" />

                    <TextView
                        android:id="@+id/tvCardAuthorCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="8sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/angela_doe" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingHorizontal="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/layoutCoursePrice"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:text="@string/harga" />


                        <TextView
                            android:id="@+id/tvCoursePrice"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/rp_349_000"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_regular"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTaxPrice"
                        app:layout_constraintStart_toEndOf="@id/layoutCoursePrice"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layoutTotalPrice"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:text="@string/ppn_11" />


                        <TextView
                            android:id="@+id/tvTaxPrice"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/rp_38_390"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTotalPrice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:text="@string/total_bayar" />


                        <TextView
                            android:id="@+id/tvTotalPrice"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/rp_387_390"
                            android:textColor="#6148FF"
                            android:fontFamily="@font/montserrat_bold"/>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabView"
        app:layout_constraintBottom_toTopOf="@id/buttonCheckout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/buttonCheckout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:layout_marginBottom="18dp"
        android:drawableEnd="@drawable/arrow_circle_right_fill1_wght400_grad0_opsz24"
        android:text="@string/bayar_dan_ikuti_kelas_selamanya" />


</androidx.constraintlayout.widget.ConstraintLayout>